# tf

./: .gitignore  LICENSE  MANIFEST.in  README.md  ai.tf  pyproject.toml  setup.cfg  tf_backend.py  tf_mcp.py  user_man.txt  vscode-textfolding-0.1.0.vsix
.github/workflows/: tests.yml
benchmarks/: BASELINE_SHA256.txt  EXPERIMENT.md  README.md  bench.sh  bench15.sh
benchmarks/cases/argparse_m/: prompt_a.md  prompt_tf.md
benchmarks/cases/argparse_multi/: p1_a.md  p1_tf.md  p2_a.md  p2_tf.md  p3_a.md  p3_tf.md  p4_a.md  p4_tf.md  p5_a.md  p5_tf.md  p6_a.md  p6_tf.md  prompts.json
benchmarks/cases/argparse_multi/files/argparse/: tf.py
benchmarks/cases/pydecimal_l/: prompt_a.md  prompt_tf.md
benchmarks/cases/pydecimal_multi/: p10_a.md  p10_tf.md  p11_a.md  p11_tf.md  p12_a.md  p12_tf.md  p13_a.md  p13_tf.md  p14_a.md  p14_tf.md  p15_a.md  p15_tf.md  p1_a.md  p1_tf.md  p2_a.md  p2_tf.md  p3_a.md  p3_tf.md  p4_a.md  p4_tf.md  p5_a.md  p5_tf.md  p6_a.md  p6_tf.md  p7_a.md  p7_tf.md  p8_a.md  p8_tf.md  p9_a.md  p9_tf.md  prompts.json
benchmarks/cases/textwrap_s/: prompt_a.md  prompt_tf.md  tf.py
benchmarks/harness/: mcp_tf.template.json  session.sh  settings_nocache.json
test/: golden_sample.txt  run_all.sh  run_cli.py  run_mcp.py  run_miller.py  run_trees.py  sample_raw.py  test.sh
textfolding/: ai.tf  user_man.txt
vscode-textfolding/: .vscodeignore  package-lock.json  package.json  tf_backend.py
vscode-textfolding/src/: backend.ts  extension.ts  millerPanel.ts
vscode-textfolding/src/media/: miller.css  miller.js
(+1 files in other folders)
