[metadata]
name = textfolding
version = 0.1.0
description = Marker-based structural navigation for LLM agents
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
python_requires = >=3.10

[options]
py_modules =
    tf_backend
    tf_mcp
packages =
    tf_wiki
install_requires =
    mcp>=1.0.0

[options.package_data]
tf_wiki = *.md

[options.entry_points]
console_scripts =
    tf = tf_backend:main
    tf-mcp = tf_mcp:main
    tf-ai = tf_mcp:main_ai
    tf-mcp-lite = tf_mcp_lite:main
